tests/compile_fail/skip_invalid.stderr
error: expected identifier, found `]`
 --> tests/compile_fail/skip_invalid.rs:9:6
  |
8 | struct X {
  |        - while parsing this struct
9 |     #[auto_default(skip a)]
  |      ^^^^^^^^^^^^^^^^^^^^^^ expected identifier

error: unexpected token
 --> tests/compile_fail/skip_invalid.rs:9:25
  |
9 |     #[auto_default(skip a)]
  |                         ^

error: expected `skip`
  --> tests/compile_fail/skip_invalid.rs:11:20
   |
11 |     #[auto_default(not_skip)]
   |                    ^^^^^^^^

error: expected `(skip)`
  --> tests/compile_fail/skip_invalid.rs:13:19
   |
13 |     #[auto_default{skip}]
   |                   ^^^^^^

error: expected `(skip)`, found `()`
  --> tests/compile_fail/skip_invalid.rs:15:19
   |
15 |     #[auto_default()]
   |                   ^^

error: expected `(skip)` after this
  --> tests/compile_fail/skip_invalid.rs:17:7
   |
17 |     #[auto_default]
   |       ^^^^^^^^^^^^
